[tool.poetry]
name = "ur_controller"
version = "1.1.0"
description = "Personal UR controller."
authors = ["Haegu Lee"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = ">=1.26.0,<1.27.0"  # Restrict to compatible version
numpy_quaternion = "==2023.0.3"
pytest = "==8.3.2"
pdoc = "==14.6.1"
spatialmath-python = "==1.1.9"
glfw = "==2.7.0"
pandas= "==2.2.2"

[tool.poetry.group.real]
optional = true

[tool.poetry.group.real.dependencies]
ur_rtde = "==1.5.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
